--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -125,6 +125,7 @@ p {
   background: #333 url(../img/Showcase.jpg) no-repeat center center/cover;
   height: 100vh;
   color: #fff;
+  position: relative;
 }
 #showcase .showcase {
   display: flex;
@@ -136,7 +137,7 @@ p {
   padding: 0 2rem;
   /* overlay */
   position: absolute;
-  top: 65px;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
@@ -164,6 +165,7 @@ p {
 }
 #about div {
   flex: 1;
+  flex-basis: 50%;
 }
 #about .about-img {
   background: url(../img/Team.jpg) no-repeat center center/cover;
@@ -184,6 +186,7 @@ p {
 #contact .map,
 #contact .contact-form {
   flex: 1;
+  /* flex-basis: 50%; */
 }
 #contact .contact-form .form-group {
   margin: 0.75rem;
